# trakd

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindLCM.cmake
hidapi/: CMakeLists.txt
hidapi/vapi/: hidapi.vapi
include/xat/: header.h  xat.h
lcm_vala/: test.c  test.vala
lcm_vala/vapi/: lcm.vapi
xat_gpsd/: CMakeLists.txt
xat_gpsd/src/: gpsd.vala  xat_gpsd.cpp
xat_gpsd/vapi/: libgps.vapi
xat_mavlinkd/: CMakeLists.txt
xat_mavlinkd/src/: mavconn.vala  mavlinkd.vala  transport.vala
xat_mavlinkd/vapi/: mavlink.vapi
xat_msgs/: CMakeLists.txt  lcm-spy  mkjar.sh
xat_msgs/lcm/: gps_fix_t.lcm  header_t.lcm
xat_msgs/msg/: command_t.lcm  global_position_t.lcm  gps_fix_t.lcm  header_t.lcm  heartbeat_t.lcm  joint_goal_t.lcm  joint_state_t.lcm  lla_point_t.lcm  nav_status_t.lcm  vector_t.lcm  voltage_t.lcm
xat_msgs/src/: header_filler.vala
xat_rotd/: 90-xat-rot.rules  CMakeLists.txt
xat_rotd/etc/: 90-xat-rot.rules
xat_rotd/include/xat_rotd/: hid_conn.h  hid_reports.h
xat_rotd/src/: hid-hidraw.c  hid_conn.cpp  hid_conn.vala  rotd.vala  xat_rotd.cpp
xat_rotd_vala/: CMakeLists.txt
xat_rotd_vala/src/: hid_conn.vala  rotd.vala
xat_scripts/: CMakeLists.txt
xat_scripts/scripts/: env.sh  xat_copy_home.lua  xat_home.lua  xat_killall.lua  xat_moveto.lua  xat_state.lua  xat_stop.lua
xat_sim/: CMakeLists.txt
xat_sim/src/: xplane10.vala
xat_trakd/: CMakeLists.txt
xat_trakd/src/: geo.vala  trakd.vala
